<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ParamStatus" Id="{4ded4408-cf3a-461f-894c-ce0fbbd65131}">
    <Declaration><![CDATA[TYPE ST_ParamStatus :
STRUCT
	eMMA : E_ModeMMA; 
	xModePasAPas:BOOL;
	xErreur:BOOL;		//shows the current error state
	iId : INT; 			//error number currently active
	sMessage : STRING; 	//error message for the active error
	xInitOk:BOOL;		//indique que l'initialisation a été exécutée
	xHomingDone : BOOL;	//indique q'on a fait un homing depuis la derniere mise en puissance
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>